--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
                 <button id="change-username-btn">Change Username</button>
                 <span class="current-username">(Current: <span id="username-display"></span>)</span>
             </div>
+            <button class="theme-toggle js-only" id="theme-toggle">
+                <span id="theme-toggle-text">🌙</span>
+            </button>
         </div>
 
         <!-- Messages container -->
