--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <noscript>
         <link rel="stylesheet" href="/static/css/noscript.css">
     </noscript>
+    <script src="/static/js/theme.js"></script>
     <script>
         // Mark page as JavaScript-enabled
         document.documentElement.className = 'js';
@@ -30,9 +31,12 @@
                     <span class="username-icon">✎</span>
                 </button>
             </div>
-            <button class="theme-toggle js-only" id="theme-toggle">
-                <span id="theme-toggle-text">🌙</span>
-            </button>
+            <div class="nav-links">
+                <a href="/status" class="nav-link">System Status</a>
+                <button class="theme-toggle js-only" id="theme-toggle">
+                    <span id="theme-toggle-text">🌙</span>
+                </button>
+            </div>
         </div>
 
         <!-- Messages container -->
